# ChangeLog for app-portage/elogv
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/ChangeLog,v 1.21 2007/09/16 13:21:09 angelos Exp $

  16 Sep 2007; Christoph Mende <angelos@gentoo.org> elogv-0.6-r1.ebuild:
  Stable on amd64 wrt bug #192671

  16 Sep 2007; Christian Faulhammer <opfer@gentoo.org> elogv-0.6-r1.ebuild:
  stable x86, bug 192671

*elogv-0.6-r1 (16 Sep 2007)

  16 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/elogv-0.6-filename_read.patch, +elogv-0.6-r1.ebuild:
  add patch prepared by Radice David <david.e.pi.3.14@gmail.com> in bug
  187595: Fixes crash when not expected files are found in ELOGDIR

  14 Sep 2007; Christian Faulhammer <opfer@gentoo.org> elogv-0.6.ebuild:
  fix installation, thanks to deadhead:. <deadhead@wooow.it> in bug 192514

*elogv-0.6 (11 Sep 2007)

  11 Sep 2007; Christian Faulhammer <opfer@gentoo.org> +elogv-0.6.ebuild:
  improvements on performance in this version bump

  19 Aug 2007; Ferris McCormick <fmccor@gentoo.org> elogv-0.5.1.ebuild:
  Add ~sparc keyword.  Works ans seems useful.

  12 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elogv-0.5.1.ebuild:
  stable x86, bug 181716

  27 Apr 2007; Steve Dibb <beandog@gentoo.org> elogv-0.5.1.ebuild:
  amd64 stable

  12 Feb 2007; Christian Faulhammer <opfer@gentoo.org> elogv-0.5.1.ebuild:
  added qa to the possible ELOG features

  29 Jan 2007; Christian Faulhammer <opfer@gentoo.org> -elogv-0.5.ebuild:
  clean up

*elogv-0.5.1 (15 Jan 2007)

  15 Jan 2007; <fauli@gentoo.org> -elogv-0.4.2.ebuild, +elogv-0.5.1.ebuild:
  version bump and removal of old version; only small bugfixes

  31 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> elogv-0.5.ebuild:
  Add ~alpha keyword, bug 156584.

  28 Dec 2006; Petteri Räty <betelgeuse@gentoo.org> elogv-0.5.ebuild:
  PORT_LOGDIR might not be set so have a default value for it.

  11 Dec 2006; Christian Faulhammer <opfer@gentoo.org> elogv-0.4.2.ebuild,