@@ -5,41 +5,34 @@ AUX elogv-0.6-filename_read.patch 429 RMD160 8a35acb8b2d1c4ce47c5ab70e2a4de5c16b
 MD5 f3ee0304ce1a54abbd2ea0381ed875b2 files/elogv-0.6-filename_read.patch 429
 RMD160 8a35acb8b2d1c4ce47c5ab70e2a4de5c16b783ff files/elogv-0.6-filename_read.patch 429
 SHA256 256a2828a9f2c1a6d4ac81b32608fa26a0af7e046c29d3a12ed8d3de3c337e23 files/elogv-0.6-filename_read.patch 429
-DIST elogv-0.5.1.tar.bz2 11258 RMD160 309f6050cd20f04b417ad96def00165d16d6ecaa SHA1 b2a5c17f4f16ff3d505e9dcd0347163cbf3011a2 SHA256 0426702901d533f8d09c8cf8ad3909e5bd38215ced519df8613c1297458901f6
+DIST elogv-0.6.1.tar.bz2 12439 RMD160 4c5cd7dd98cf7a463c2d55b0a8cf33e1f887a813 SHA1 cba1e8d9f183556b507f9e1a313d9ae2e0904994 SHA256 3e3aacc7587d2660b5c0632176915d9f96955df7b8fc533a4b98452443fe13c7
 DIST elogv-0.6.tar.bz2 12386 RMD160 f1f6364b7e885c975130ca50ab24a35ea50d1ba0 SHA1 c2b7488042e5045ae9c523a7e1717f59324470e3 SHA256 99f71c76bda1ff2f7de6ab8f582e3f74c558f17618a55dc35ebf77a79df35217
-EBUILD elogv-0.5.1.ebuild 1552 RMD160 53549ccce1869b84a76b614d26be7584ed75f16f SHA1 dab6700d1f6e900ce7c7848ab0859b57929823fe SHA256 ac185423fc569b7017e09f779b4f7346c3ba765e51802aa040ffe28e54b78d94
-MD5 16337a07db35bf90c7218fccc627df14 elogv-0.5.1.ebuild 1552
-RMD160 53549ccce1869b84a76b614d26be7584ed75f16f elogv-0.5.1.ebuild 1552
-SHA256 ac185423fc569b7017e09f779b4f7346c3ba765e51802aa040ffe28e54b78d94 elogv-0.5.1.ebuild 1552
 EBUILD elogv-0.6-r1.ebuild 1717 RMD160 150c8556df7be70b0c30a26b8e6b7ee08c5965b6 SHA1 003e4238ba7594dedae6003f0640569a44b65708 SHA256 70438d610f6582c5419693308f77ee70acd5c6e423fe3f1898f931c5601ef1c5
 MD5 cb71e74e6d2a1238a67352cb549734ad elogv-0.6-r1.ebuild 1717
 RMD160 150c8556df7be70b0c30a26b8e6b7ee08c5965b6 elogv-0.6-r1.ebuild 1717
 SHA256 70438d610f6582c5419693308f77ee70acd5c6e423fe3f1898f931c5601ef1c5 elogv-0.6-r1.ebuild 1717
-EBUILD elogv-0.6.ebuild 1626 RMD160 4a2bd3c31bab297d7b4e649494b23ff4c4521fb9 SHA1 d7aabedf91c5319252e859256e690698a8afab7a SHA256 a2a5ad3efb336fa0c33ec053da583feda5839caa117cefd86319e6d379cbc136
-MD5 fee1659ecd05456fd11e7487f610f014 elogv-0.6.ebuild 1626
-RMD160 4a2bd3c31bab297d7b4e649494b23ff4c4521fb9 elogv-0.6.ebuild 1626
-SHA256 a2a5ad3efb336fa0c33ec053da583feda5839caa117cefd86319e6d379cbc136 elogv-0.6.ebuild 1626
-MISC ChangeLog 3099 RMD160 f3b652e931725c3dc5205ff0e4831b573ce6fd7f SHA1 f374f0117501c0d9e1b5360947559f9b65d2142b SHA256 180b7e66ff644ff4737d4c73792c190a351162e5bd8d0df671ca9366d41b5855
-MD5 e2e7909165b3bced79f566e8500ee1b7 ChangeLog 3099
-RMD160 f3b652e931725c3dc5205ff0e4831b573ce6fd7f ChangeLog 3099
-SHA256 180b7e66ff644ff4737d4c73792c190a351162e5bd8d0df671ca9366d41b5855 ChangeLog 3099
+EBUILD elogv-0.6.1.ebuild 1616 RMD160 ed5fa3ad440e0b04a913d9b9752fe67e9094a064 SHA1 e1e2f16bb8bd3eddf327463e254fcca4e27e40a1 SHA256 74d7ee89912225fda5ed838f5677309e32b81fde83fb851a66f44c65c1f45d13
+MD5 8883bccd3b5e3314782f03a52a2b5fec elogv-0.6.1.ebuild 1616
+RMD160 ed5fa3ad440e0b04a913d9b9752fe67e9094a064 elogv-0.6.1.ebuild 1616
+SHA256 74d7ee89912225fda5ed838f5677309e32b81fde83fb851a66f44c65c1f45d13 elogv-0.6.1.ebuild 1616
+MISC ChangeLog 3272 RMD160 aa6c7be7fca81c78cdc82c974c83a736f67225a5 SHA1 df4db750f5a678521604abaee41c22ff9d33f26d SHA256 73b86f0cc195d846a24a4e109ad5afeed00b46fc5b6dc93c979b54c8aa64ca74
+MD5 85569dcc4ced7bbc5be7cf41c7102367 ChangeLog 3272
+RMD160 aa6c7be7fca81c78cdc82c974c83a736f67225a5 ChangeLog 3272
+SHA256 73b86f0cc195d846a24a4e109ad5afeed00b46fc5b6dc93c979b54c8aa64ca74 ChangeLog 3272
 MISC metadata.xml 267 RMD160 d425d7aa588b6e82f14ff2590ad775c99626124e SHA1 d8531cca222f2244249f04e6b744e4753def742e SHA256 a37269dacccde81aa831edb3fd92a0cd29ac13405bec7a5ba9c0261e796287c9
 MD5 4799201907060645571e0a8cbd048750 metadata.xml 267
 RMD160 d425d7aa588b6e82f14ff2590ad775c99626124e metadata.xml 267
 SHA256 a37269dacccde81aa831edb3fd92a0cd29ac13405bec7a5ba9c0261e796287c9 metadata.xml 267
-MD5 e66e7aa7dcc3c04ae0c88d349086323e files/digest-elogv-0.5.1 235
-RMD160 b4bbf28895772cc07b870990f7a682bd05e80279 files/digest-elogv-0.5.1 235
-SHA256 05905ca6eca7f56e2a1031f8c02761af93b78bbef810a46c971918f1faf2f25c files/digest-elogv-0.5.1 235
-MD5 7d1448e19f22689e5f4c25abc1dc8c27 files/digest-elogv-0.6 229
-RMD160 f6ff043b85561b06832a32e0c836db8554937ea5 files/digest-elogv-0.6 229
-SHA256 fd0f5b238aef300616750df8b6a257f61b4fed9a79a1ee8c7c407532fbaa87bd files/digest-elogv-0.6 229
 MD5 7d1448e19f22689e5f4c25abc1dc8c27 files/digest-elogv-0.6-r1 229
 RMD160 f6ff043b85561b06832a32e0c836db8554937ea5 files/digest-elogv-0.6-r1 229
 SHA256 fd0f5b238aef300616750df8b6a257f61b4fed9a79a1ee8c7c407532fbaa87bd files/digest-elogv-0.6-r1 229
+MD5 555feda1b55e6291a6b02c211d403627 files/digest-elogv-0.6.1 235
+RMD160 127ef6358ee13939c4359275c5e1eb84f40fa2cf files/digest-elogv-0.6.1 235
+SHA256 830b4dca604c54a07efe3eb0f0c1f26903636f268ec858ec669c7d7ff0e1cc8a files/digest-elogv-0.6.1 235
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFG7S3KKhnDs22gwa8RAnL8AJ9EgDVo0T3UI955csIQfyoxTzRS3wCg4Dqk
-x/Vm2NxunRET+sSWlBVr0GE=
-=ntRI
+iD8DBQFG7YIANQqtfCuFneMRAgryAJ0aT+ZtjmcWmkALDVrTiRx1913f/ACfXMFV
+RJYnLx7l7N+eU/R55YbCe/Y=
+=L1vE
 -----END PGP SIGNATURE-----
