@@ -1,3 +1,0 @@
-MD5 124886f0108eb55be5fad461ac1067c5 elogv-0.5.1.tar.bz2 11258
-RMD160 309f6050cd20f04b417ad96def00165d16d6ecaa elogv-0.5.1.tar.bz2 11258
-SHA256 0426702901d533f8d09c8cf8ad3909e5bd38215ced519df8613c1297458901f6 elogv-0.5.1.tar.bz2 11258
