@@ -1,3 +1,0 @@
-MD5 d277191b988f93a9d70aa821a0c76bef elogv-0.6.tar.bz2 12386
-RMD160 f1f6364b7e885c975130ca50ab24a35ea50d1ba0 elogv-0.6.tar.bz2 12386
-SHA256 99f71c76bda1ff2f7de6ab8f582e3f74c558f17618a55dc35ebf77a79df35217 elogv-0.6.tar.bz2 12386
