@@ -1,0 +1,3 @@
+MD5 f5ae7677e9e519d7a81d48e0f0b0cf27 elogv-0.6.1.tar.bz2 12439
+RMD160 4c5cd7dd98cf7a463c2d55b0a8cf33e1f887a813 elogv-0.6.1.tar.bz2 12439
+SHA256 3e3aacc7587d2660b5c0632176915d9f96955df7b8fc533a4b98452443fe13c7 elogv-0.6.1.tar.bz2 12439
