@@ -10,39 +10,25 @@ MD5 7dd17ea7f020783b15ac67e7b7bb11cf files/elogviewer.1 1902
 RMD160 0724480ba91d63aeef95cbc5f1899329c932e81f files/elogviewer.1 1902
 SHA256 d643e03964d18c8601493949891a941dac4b76ecb32bf64abe7749ced33286f8 files/elogviewer.1 1902
 DIST elogviewer-0.5.1.tar.gz 13726 RMD160 07865c23b1aa0c9601e38c3bd5a60442506396dc SHA1 8c4598a40fc1eca192013f5c64ec38545176d481 SHA256 6aaa4ffa181e47f5378fc513bf74bf9380f0af3fd45405e97b758ae4563a7da3
-EBUILD elogviewer-0.5.1-r1.ebuild 1381 RMD160 2e7eb4753b39dddfac5b3077541c3df4446e8895 SHA1 26d9ec068c3aa2c5dec520d6523bfed1a55fbdd1 SHA256 40401e6621308fb5cbd40306b215135980740b9a61a6f53d547913657e11d9f2
-MD5 d5ffca0a05b732073fc3f36469ba5b86 elogviewer-0.5.1-r1.ebuild 1381
-RMD160 2e7eb4753b39dddfac5b3077541c3df4446e8895 elogviewer-0.5.1-r1.ebuild 1381
-SHA256 40401e6621308fb5cbd40306b215135980740b9a61a6f53d547913657e11d9f2 elogviewer-0.5.1-r1.ebuild 1381
 EBUILD elogviewer-0.5.1-r2.ebuild 1476 RMD160 cc12c95632e3cd7c31703f065fb33700238e256b SHA1 52ab0d8c2232fe7f71c1174cef05cfdebf0aa406 SHA256 189b9923a4405958a4cfc6f54da6d0aca4996ba6959aa12a33e8520047e7df1b
 MD5 600d5e931dd0c2786310b07ecbe8eab0 elogviewer-0.5.1-r2.ebuild 1476
 RMD160 cc12c95632e3cd7c31703f065fb33700238e256b elogviewer-0.5.1-r2.ebuild 1476
 SHA256 189b9923a4405958a4cfc6f54da6d0aca4996ba6959aa12a33e8520047e7df1b elogviewer-0.5.1-r2.ebuild 1476
-EBUILD elogviewer-0.5.1.ebuild 1267 RMD160 04306ce539bf0f33400fff2a0f3e0526e28f5968 SHA1 13ff9ec4cd6901124598dd5498fdc81bb39bff51 SHA256 40a3323146da872d6756a492a101ed85f13bd8af1e248a25c9f230cc06cc3959
-MD5 30666a49fdfca5e0329c9a12e216ed7b elogviewer-0.5.1.ebuild 1267
-RMD160 04306ce539bf0f33400fff2a0f3e0526e28f5968 elogviewer-0.5.1.ebuild 1267
-SHA256 40a3323146da872d6756a492a101ed85f13bd8af1e248a25c9f230cc06cc3959 elogviewer-0.5.1.ebuild 1267
-MISC ChangeLog 3026 RMD160 4a98a259ab9ed98c8673410797f7f008e8b0b914 SHA1 9efcbec55008436cb9dec49451afd3099ecfe159 SHA256 fffe311c16a8a566912034854e1699627057cc17e2020325040b5ea225333481
-MD5 ce9d11d278f7c46347013744fc7a2d12 ChangeLog 3026
-RMD160 4a98a259ab9ed98c8673410797f7f008e8b0b914 ChangeLog 3026
-SHA256 fffe311c16a8a566912034854e1699627057cc17e2020325040b5ea225333481 ChangeLog 3026
+MISC ChangeLog 3148 RMD160 bd3c92215f507f68755cd5817083d65115be3e69 SHA1 d1e4c414a0ce00d04dc22ce2c96ecf288be88a25 SHA256 f6bf72e874d95417426d8238a45b0461fbc893bcfa9ee45df1ede87286adb563
+MD5 2355c1455f4148cea634cabb9add8c7f ChangeLog 3148
+RMD160 bd3c92215f507f68755cd5817083d65115be3e69 ChangeLog 3148
+SHA256 f6bf72e874d95417426d8238a45b0461fbc893bcfa9ee45df1ede87286adb563 ChangeLog 3148
 MISC metadata.xml 267 RMD160 d425d7aa588b6e82f14ff2590ad775c99626124e SHA1 d8531cca222f2244249f04e6b744e4753def742e SHA256 a37269dacccde81aa831edb3fd92a0cd29ac13405bec7a5ba9c0261e796287c9
 MD5 4799201907060645571e0a8cbd048750 metadata.xml 267
 RMD160 d425d7aa588b6e82f14ff2590ad775c99626124e metadata.xml 267
 SHA256 a37269dacccde81aa831edb3fd92a0cd29ac13405bec7a5ba9c0261e796287c9 metadata.xml 267
-MD5 ac7a658c59fe55a47669d432e9872157 files/digest-elogviewer-0.5.1 247
-RMD160 42e88fcb69258036841238140c97cef6808376fc files/digest-elogviewer-0.5.1 247
-SHA256 ddcbc70628b0a513783d45e9dda2f0c603506adf11de5eedb7b8e2278e8689e5 files/digest-elogviewer-0.5.1 247
-MD5 ac7a658c59fe55a47669d432e9872157 files/digest-elogviewer-0.5.1-r1 247
-RMD160 42e88fcb69258036841238140c97cef6808376fc files/digest-elogviewer-0.5.1-r1 247
-SHA256 ddcbc70628b0a513783d45e9dda2f0c603506adf11de5eedb7b8e2278e8689e5 files/digest-elogviewer-0.5.1-r1 247
 MD5 ac7a658c59fe55a47669d432e9872157 files/digest-elogviewer-0.5.1-r2 247
 RMD160 42e88fcb69258036841238140c97cef6808376fc files/digest-elogviewer-0.5.1-r2 247
 SHA256 ddcbc70628b0a513783d45e9dda2f0c603506adf11de5eedb7b8e2278e8689e5 files/digest-elogviewer-0.5.1-r2 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.7 (GNU/Linux)
+Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFG7VM3KhnDs22gwa8RAm/YAJ9SYZd5Hq9uRBUnPtBIIYJoak375gCg8Q3o
-GtAtypgUwI9YfeaHx7RpKEc=
-=/Jxd
+iD8DBQFG7YLcNQqtfCuFneMRAk4YAJsHsTCJfJty49ntNxPA/XdJ1poK1ACfRj+7
+neH4FF/Stqqgph23ktiVpn8=
+=6prw
 -----END PGP SIGNATURE-----
