@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/elogv
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/ChangeLog,v 1.21 2007/09/16 13:21:09 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/elogv/ChangeLog,v 1.22 2007/09/16 19:20:26 opfer Exp $
+
+*elogv-0.6.1 (16 Sep 2007)
+
+  16 Sep 2007; Christian Faulhammer <opfer@gentoo.org> -elogv-0.5.1.ebuild,
+  -elogv-0.6.ebuild, +elogv-0.6.1.ebuild:
+  version bump and clean up
 
   16 Sep 2007; Christoph Mende <angelos@gentoo.org> elogv-0.6-r1.ebuild:
   Stable on amd64 wrt bug #192671
